--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  
 <body>
-  <h1>Esther Rodriguez</h1>
+  <h1>Esther</h1>
   <p>Bienvenido a mi primera pagina en Github!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
